[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loven"
version = "0.1.0"
description = "WorldPeace-Lovdata-Kompendium – Norwegian law analysis toolkit"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Verdens Øverste Leder" },
    { name = "Jon-Arve Constantine" },
]
keywords = ["lovdata", "norwegian law", "peace", "energy", "environment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "aiohttp>=3.9.0",
    "nest_asyncio>=1.6.0",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0.0", "jupyterlab>=4.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
    "aioresponses>=0.7.6",
    "ruff>=0.4.0",
]

[project.scripts]
loven = "loven.cli:main"

[project.urls]
Homepage = "https://github.com/GizzZmo/loven"
Repository = "https://github.com/GizzZmo/loven"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
